fixed minor typo in the toy intro slide

--- a/experiments/goal_actions/soc_info_goals.html
+++ b/experiments/goal_actions/soc_info_goals.html
@@ -79,7 +79,7 @@
           <td align="center" width="10">
             <p>A children's toy developer has designed a simple device with <b>two buttons</b> that if pressed in the correct way will play music.</p>
             <br>
-            <p> Click on the Next button to hear and example of the kind of music it can play.</p>
+            <p> Click on the Next button to hear the kind of music it can play.</p>
           </td>
         </tr>
         <tr>
@@ -226,6 +226,10 @@
       <p class="block-text" name="gender" >
         What is your gender? (m = male, f = female, o = other) <br>
         <input type="text" id="gender" name="gender" size="70">
+      </p>
+      <p class="block-text" name="language" >
+        What is your first language? <br>
+        <input type="text" id="language" name="language" size="70">
       </p>
       <table align="center"><tr><td align="center">
         <button type="button" id="checkFinishedButton" onClick="exp.check_finished()">Finished</button>
