added randomization of button color

--- a/experiments/goal_actions/soc_info_goals.html
+++ b/experiments/goal_actions/soc_info_goals.html
@@ -85,7 +85,7 @@
         </tr>
         <tr>
           <td align='center'>
-            <img src="imgs/music_box_left.jpeg" height="300" width="400"> 
+            <div id ="music_box_intro"></div> 
 
             <audio id="sound_player">
               <source src="imgs/music_trimmed.m4a" type="audio/mp4">
@@ -111,7 +111,7 @@
         </tr>
         <tr>
           <td align='center'>
-            <img src="imgs/music_box_left.jpeg" height="200" width="300"> 
+            <div id ="music_box_goals"></div> 
           </td>
         </tr>
         <tr>
@@ -124,7 +124,9 @@
 
     <!-- Actions Slide-->
     <div class = "slide" id = "actions">
-      <div align="center"><img src="imgs/music_box_left.jpeg" height="300" width="400"> </div>
+      
+      <div align="center" id ="music_box_actions"></div> 
+
       <table align="center" id="actions_table">
         <tr>
             <td align="center">
@@ -167,7 +169,7 @@
 
         <tr>
           <td align='center'>
-            <img src="imgs/music_box_left.jpeg" height="200" width="300"> 
+            <div id ="music_box_hyps"></div> 
           </td>
         </tr>
         
