--- a/experiments/goal_actions/soc_info_goals.html
+++ b/experiments/goal_actions/soc_info_goals.html
@@ -77,7 +77,7 @@
       <table align="center">
         <tr>
           <td align="center" width="10">
-            <p>A children's toy developer has designed a simple device with <b>two buttons</b> that if pressed in the correct way will play music.</p>
+            <p class="block-text">A children's toy developer has designed a simple device with <b>two buttons</b> that if pressed in the correct way will play music.</p>
             <br>
             <p> Click on the <b>Next</b> button to hear the kind of music it can play.</p>
             <p> Make sure your volume is turned on to hear the music.</p>
@@ -106,7 +106,7 @@
       <table align="center">
         <tr>
           <td align="center">
-            <div id ="goal_text"> </div> 
+            <p class="block-text" id ="goal_text"> </p> 
           </td>
         </tr>
         <tr>
@@ -130,18 +130,14 @@
       <table align="center" id="actions_table">
         <tr>
             <td align="center">
-              <p> Imagine you only had one attempt to play with the toy.</p>
-              <p>Which action would you want to try?</p>
+              <p class="action-text"> Imagine you only had one attempt to play with the toy.</p>
+              <p class="action-text">Which action would you want to try?</p>
               <br>
-              <div id ="goal_text_action"> </div> 
+              <p class="action-text" id ="goal_text_action">
             </td>
         </tr>
         <tr>
-            <td align = "center"> 
-                <label class="btn btn-default"><input type="radio" name="intervention" value="orange"/>Press Orange Button</label> 
-                <label class="btn btn-default"><input type="radio" name="intervention" value="purple"/>Press Purple Button</label>
-                <label class="btn btn-default"><input type="radio" name="intervention" value="orange_and_purple"/>Press Orange and Purple Button at the same time</label>  
-            </td> 
+            <td id="action_buttons" align = "center"> </td> 
         </tr>
 
         <tr>
@@ -165,13 +161,26 @@
         <p class="block-text" id="hypotheses_text"></p>
       </div>
 
-       <table id="slider_table", align="center">
+      <div align="center" id ="music_box_hyps"></div> 
 
-        <tr>
-          <td align='center'>
-            <div id ="music_box_hyps"></div> 
-          </td>
-        </tr>
+
+       <table id="slider_table", align="center">
+          <tr>
+            <td></td>
+            <td class="slider_labels">
+              <div class="left_label">very unlikely</div>
+              <div class="right_label">very likely</div>
+            </td>
+         </tr>
+
+         <tr id="hyp_row_0"></tr>
+         <tr id="hyp_row_1"></tr>
+         <tr id="hyp_row_2"></tr>
+
+       </table>
+
+
+      <!--  <table id="slider_table", align="center">
         
         <tr>
           <td></td>
@@ -179,10 +188,10 @@
             <div class="left_label">very unlikely</div>
             <div class="right_label">very likely</div>
           </td>
-      </tr>
+        </tr>
 
         <tr>
-          <td><b>Press just the Purple Button</b></td>
+          <td><b>Press just the <font color="purple">Purple</font> Button</b></td>
           <td>
             <div id="slidecontainer">
                 <input type="range" min="1" max="100" value="50" class="slider" id="myRange1">
@@ -190,7 +199,7 @@
         </tr>
 
         <tr>
-          <td><b>Press just the Orange Button</b></td>
+          <td><b>Press just the <font color="orange">Orange</font> Button</b></td>
           <td>
              <div id="slidecontainer">
                 <input type="range" min="1" max="100" value="50" class="slider" id="myRange2">
@@ -199,7 +208,7 @@
         </tr>
 
         <tr>
-          <td><b>Press both the Purple and Orange Buttons</b></td>
+          <td><b>Press both the <font color="purple">Purple </font> and <font color="orange">Orange</font> Buttons</b></td>
           <td>
              <div id="slidecontainer">
                 <input type="range" min="1" max="100" value="50" class="slider" id="myRange3">
@@ -207,7 +216,7 @@
           </td>
         </tr>
 
-      </table>
+      </table> -->
 
       <div align='center'>
         <button type="button" id="hyps_to_end" onClick="exp.hypotheses_check()">Advance the task</button>
