added success message after the submit action button is clicked

--- a/experiments/goal_actions/soc_info_goals.html
+++ b/experiments/goal_actions/soc_info_goals.html
@@ -77,7 +77,7 @@
       <table align="center">
         <tr>
           <td align="center" width="10">
-            <p class="block-text">A children's toy developer has designed a simple device with <b>two buttons</b> that if pressed in the correct way will play music.</p>
+            <p class="block-text">A children’s toy developer has designed a simple device with two buttons, orange and purple. The toy will play music if the correct button(s) is/are pressed.</p>
             <br>
             <p> Click on the <b>Next</b> button to hear the kind of music it can play.</p>
             <p> Make sure your volume is turned on to hear the music.</p>
@@ -178,45 +178,6 @@
          <tr id="hyp_row_2"></tr>
 
        </table>
-
-
-      <!--  <table id="slider_table", align="center">
-        
-        <tr>
-          <td></td>
-          <td class="slider_labels">
-            <div class="left_label">very unlikely</div>
-            <div class="right_label">very likely</div>
-          </td>
-        </tr>
-
-        <tr>
-          <td><b>Press just the <font color="purple">Purple</font> Button</b></td>
-          <td>
-            <div id="slidecontainer">
-                <input type="range" min="1" max="100" value="50" class="slider" id="myRange1">
-            </div>
-        </tr>
-
-        <tr>
-          <td><b>Press just the <font color="orange">Orange</font> Button</b></td>
-          <td>
-             <div id="slidecontainer">
-                <input type="range" min="1" max="100" value="50" class="slider" id="myRange2">
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <td><b>Press both the <font color="purple">Purple </font> and <font color="orange">Orange</font> Buttons</b></td>
-          <td>
-             <div id="slidecontainer">
-                <input type="range" min="1" max="100" value="50" class="slider" id="myRange3">
-            </div>
-          </td>
-        </tr>
-
-      </table> -->
 
       <div align='center'>
         <button type="button" id="hyps_to_end" onClick="exp.hypotheses_check()">Advance the task</button>
