fixed bug in tracking the order of the hypotheses slider labels

--- a/experiments/goal_actions/soc_info_goals.html
+++ b/experiments/goal_actions/soc_info_goals.html
@@ -130,8 +130,7 @@
       <table align="center" id="actions_table">
         <tr>
             <td align="center">
-              <p class="action-text"> Imagine you only had one attempt to play with the toy.</p>
-              <p class="action-text">Which action would you want to try?</p>
+              <p class="action-text"> Imagine you only had one attempt to play with the toy. Which action would you want to try?</p>
               <br>
               <p class="action-text" id ="goal_text_action">
             </td>
@@ -145,7 +144,6 @@
             <p> If your action makes the toy work, you will hear music.</p>
             <div align='center'>
               <button type="button" id="actions_to_hyp" onClick="exp.actions_check()">Submit Action</button>
-            </div>
             <div align="center" id="actions_test_check"></div>
           </td>
         </tr>
