--- a/experiments/goal_actions/soc_info_goals.html
+++ b/experiments/goal_actions/soc_info_goals.html
@@ -85,7 +85,10 @@
         </tr>
         <tr>
           <td align='center'>
-            <div id ="music_box_intro"></div> 
+
+            <img id="notes_gif" src="imgs/music_notes.gif" alt="music notes" style="width:160px;height:80px;">
+
+            <div id="music_box_intro"></div> 
 
             <audio id="sound_player">
               <source src="imgs/music_trimmed.m4a" type="audio/mp4">
