updated text of the goal manipulation after pilotA

--- a/experiments/goal_actions/soc_info_goals.html
+++ b/experiments/goal_actions/soc_info_goals.html
@@ -168,12 +168,11 @@
     <!--  Hypotheses Slide-->
     <div class = "slide" id = "hypotheses">
 
-      <div align="center">
-        <p class="block-text" id="hypotheses_text"></p>
-      </div>
-
       <div align="center" id ="music_box_hyps"></div>
 
+      <div align="center">
+        <p id="hypotheses_text"></p>
+      </div>
 
        <table id="slider_table", align="center">
           <tr>
