rearranged pictures correctly

--- a/experiments/goal_actions_ver2/soc_info_goals.html
+++ b/experiments/goal_actions_ver2/soc_info_goals.html
@@ -154,17 +154,6 @@
         </div>
 
         <div align="center" id="music_box_actions"></div>
-                    <div id="music_box_actions">
-                    <center>
-                        <table>
-                            <tr>
-                                <td><div id ="music_box_actions_0"></div></td>
-                                <td><div id ="music_box_actions_1"></div></td>
-                                <td><div id ="music_box_actions_2"></div></td>
-                            </tr>
-                        </table>
-                    </center>
-                </div> 
 
         <p class="action-text">Imagine you only had one attempt to play with the toy. Which action would you want to try?</p>
 
@@ -184,6 +173,20 @@
 
         <br>
 
+        <div id="music_box_actions">
+            <p align='center'> Remember that the toy can be one of the three: </p>
+                    <center>
+                        <table>
+                            <tr>
+                                <td><div id ="music_box_actions_0"></div></td>
+                                <td><div id ="music_box_actions_1"></div></td>
+                                <td><div id ="music_box_actions_2"></div></td>
+                            </tr>
+                        </table>
+                    </center>
+                </div> 
+
+        
         <table align="center">
             <tr>
                 <td align="center">
@@ -202,17 +205,6 @@
         <div class="slide" id="hypotheses">
 
             <div align="center" id="music_box_hyps"></div><br>
-                   <div id="music_box_hyps">
-                    <center>
-                        <table>
-                            <tr>
-                                <td><div id ="music_box_hyps_0"></div></td>
-                                <td><div id ="music_box_hyps_1"></div></td>
-                                <td><div id ="music_box_hyps_2"></div></td>
-                            </tr>
-                        </table>
-                    </center>
-                </div> 
 
             <div align="center">
                 <p id="hypotheses_text"></p>
@@ -220,6 +212,7 @@
 
             <table id="slider_table" , align="center">
                 <tr>
+                    <td></td>
                     <td></td>
                     <td class="slider_labels">
                         <div class="left_label">very unlikely</div>
