--- a/experiments/goal_actions_ver2/soc_info_goals.html
+++ b/experiments/goal_actions_ver2/soc_info_goals.html
@@ -77,17 +77,12 @@
     <table align="center">
         <tr>
             <td align="center" width="10">
-                <p class="block-text">A children’s toy developer has designed a simple device with two buttons, orange and purple. The toy will play music if the correct button(s) is/are pressed.</p>
-
-                <p class="block-text"> Click on the <b>Next</b> button to hear the kind of music it can play.</p>
-
-                <p class="block-text"> Make sure your volume is turned on to hear the music.</p>
+                <p class="block-text">Imagine that you are a children’s toy developer, and you’ve designed three toys that each work in different ways. You've labelled each toy at the bottom.</p>
             </td>
         </tr>
         <tr>
             <td align='center'>
-                <img id="notes_gif" src="imgs/music_notes.gif" alt="music notes" style="width:160px;height:80px;">
-
+<!--                <img id="notes_gif" src="imgs/music_notes.gif" alt="music notes" style="width:160px;height:80px;">-->
                 <div id="music_box_intro">
                     <center>
                         <table>
@@ -98,13 +93,15 @@
                             </tr>
                         </table>
                     </center>
-                </div> 
-                
+                </div>                
+<!--
                 <audio id="sound_player">
               <source src="imgs/music_trimmed.m4a" type="audio/mp4">
             </audio>
-
-                <button type="button" id="play_music" onClick="exp.play_music('toy_slide')">Next (hear the music)
+-->
+                <p align="center"> Click <b>Next</b> to see how each toy works.</p>
+<!--                <button type="button" id="play_music" onClick="exp.play_music('toy_slide')">Next-->
+                <button type="button" id="play_music" onClick="exp.toy_instructions_slide()">Next
             </button>
             </td>
         </tr>
@@ -113,6 +110,54 @@
     <div id="slider1"></div>
 
 </div>
+
+    <!-- Toy instructions Slide-->
+    <div class="slide" id="toy-instructions">
+        <div align="center" id="music_box_instructions"></div>
+
+        <p class="action-text">Please answer the following questions to make sure you've understood the instructions.</p>
+
+        <p class="action-text" id="initial_question1"></p>
+
+        <p class="action-text" id="goal_text_action"></p>
+
+        <div id="initial1_buttons" align="center">
+            <fieldset>
+                <form>
+                    <div id="initial1_button_0" align="left"></div>
+                    <div id="initial1_button_1" align="left"></div>
+                    <div id="initial1_button_2" align="left"></div>
+                </form>
+            </fieldset>
+        </div>
+        <br><br>
+
+        <p class="action-text"  id="initial_question2"></p>
+
+        <div id="initial2_buttons" align="center">
+            <fieldset>
+                <form>
+                    <div id="initial2_button_0" align="left"></div>
+                    <div id="initial2_button_1" align="left"></div>
+                    <div id="initial2_button_2" align="left"></div>
+                </form>
+            </fieldset>
+        </div>
+        <br>
+        
+        <table align="center">
+            <tr>
+                <td align="center">
+<!--                    <p> If your action makes the toy work, you will hear music.</p>-->
+                    <div align='center'>
+                        <button type="button" id="actions_to_hyp" onClick="exp.initial_check()">Submit Action</button>
+                        <div align="center" id="actions_test_check"></div>
+                </td>
+            </tr>
+        </table>
+
+
+        </div>
 
     <!-- Goal Manipulation Slide -->
     <div class="slide" id="goal_manipulation">
