--- a/experiments/goal_actions_ver2/soc_info_goals.html
+++ b/experiments/goal_actions_ver2/soc_info_goals.html
@@ -76,13 +76,16 @@
         <table align="center">
             <tr>
                 <td align="center" width="10">
-                    <p class="block-text">Imagine that you are a children’s toy developer, and you’ve designed three toys that each work in different ways. You've labelled each toy at the bottom.</p>
+                    <p class="block-text">Imagine that you are a children’s toy developer, and you’ve designed three toys that each work in different ways. </p>
+                    <br><br>
+                    <p align="center">Each toy looks like this:</p>
                 </td>
             </tr>
             <tr>
                 <td align='center'>
                     <!--                <img id="notes_gif" src="imgs/music_notes.gif" alt="music notes" style="width:160px;height:80px;">-->
                     <div id="music_box_intro">
+                        <!--
                         <center>
                             <table>
                                 <tr>
@@ -98,10 +101,12 @@
                                 </tr>
                             </table>
                         </center>
+-->
                     </div>
                     <audio id="sound_player">
               <source src="imgs/music_trimmed.m4a" type="audio/mp4">
             </audio>
+                    <br><br>
                     <p align="center"> Click <b>Next</b> to see how each toy works.</p>
                     <!--                <button type="button" id="play_music" onClick="exp.play_music('toy_slide')">Next-->
                     <button type="button" id="play_music" onClick="exp.toy_instructions_slide()">Next
@@ -124,7 +129,7 @@
 
         <!--        <p class="action-text" id="goal_text_action"></p>-->
 
-        <div id="initial1_buttons" align="center">
+        <div id="initial_action1" align="center">
             <fieldset>
                 <form>
                     <div id="initial1_button_0" align="left"></div>
@@ -137,7 +142,7 @@
 
         <p class="action-text" id="initial_question2"></p>
 
-        <div id="initial2_buttons" align="center">
+        <div id="initial_action2" align="center">
             <fieldset>
                 <form>
                     <div id="initial2_button_0" align="left"></div>
@@ -212,26 +217,8 @@
 
             <p class="action-text" id="goal_text"></p>
 
-            <p class="action-text">Which action do you want to take?</p>
-            <!--        <p class="action-text" id="goal_text_action"></p>-->
-
-
-            <!--        <br>-->
-
-            <div id="action_buttons" align="center">
-                <fieldset>
-                    <form>
-                        <div id="action_button_0" align="left"></div>
-                        <div id="action_button_1" align="left"></div>
-                        <div id="action_button_2" align="left"></div>
-                    </form>
-                </fieldset>
-            </div>
-
-            <br><br>
-
             <div id="music_box_actions">
-                <p align='center'> Remember that the toy can be one of the three: </p>
+                <p align='center'> Remember that the toy could be one of these three: </p>
                 <center>
                     <table>
                         <tr>
@@ -248,6 +235,26 @@
                     </table>
                 </center>
             </div>
+            <br><br>
+
+            <p class="action-text">Which action do you want to take?</p>
+<!--                    <p class="action-text" id="goal_text_action"></p>-->
+
+
+            <!--        <br>-->
+
+            <div id="action_buttons" align="center">
+                <fieldset>
+                    <form>
+                        <div id="action_button_0" align="left"></div>
+                        <div id="action_button_1" align="left"></div>
+                        <div id="action_button_2" align="left"></div>
+                    </form>
+                </fieldset>
+            </div>
+
+            <br><br>
+
 
 
             <table align="center">
