added try/catch for safari rejected promise audio bug

--- a/experiments/goal_actions_ver2/soc_info_goals.html
+++ b/experiments/goal_actions_ver2/soc_info_goals.html
@@ -91,9 +91,7 @@
                         </center>
 -->
                     </div>
-                    <audio id="sound_player">
-              <source src="imgs/music_trimmed.m4a" type="audio/mp4">
-            </audio>
+
                     <br><br>
                     <p align="center"> Click <b>Next</b> to see how each toy works.</p>
                     <!--                <button type="button" id="play_music" onClick="exp.play_music('toy_slide')">Next-->
@@ -196,8 +194,10 @@
 
         <!-- Actions Slide-->
         <div class="slide" id="actions">
+
+          <audio id="sound_player"> <source src="imgs/music_trimmed.m4a" type="audio/mp4"></audio>
+
             <div align="center">
-                <div align="center" id="actions_test_check"></div>
                 <img id="notes_gif_actions" src="imgs/music_notes.gif" alt="music notes" style="width:160px;height:80px;">
             </div>
 
@@ -243,8 +243,6 @@
 
             <br><br>
 
-
-
             <table align="center">
                 <tr>
                     <td align="center">
@@ -254,6 +252,7 @@
                     </td>
                 </tr>
             </table>
+            <div align="center" id="actions_test_check"></div>
 
 
             </div>
