minor updates to actions prior elicitation expt

--- a/experiments/goal_actions_priors/soc_info_goals.html
+++ b/experiments/goal_actions_priors/soc_info_goals.html
@@ -162,13 +162,15 @@
 
             <div class="slide" id="final_questions">
                 <center> You're finished! Please answer the following questions to help us improve our task. Thank you!<br> <br>
+
+                  <p class="block-text" name="why_action">
+                      Why did you select the action that you chose? <br>
+                      <input type="text" id="why_action" name="why_action" size="70">
+                  </p>
+
                     <p class="block-text">
                         What do you think this task was about? <br>
                         <input type="text" id="about" name="about" size="70">
-                    </p>
-                    <p class="block-text" name="comments">
-                        Do you have any other comments for us? Was there anything broken or that could be improved? <br>
-                        <input type="text" id="comments" name="comments" size="70">
                     </p>
                     <p class="block-text" name="age">
                         What is your age in years? <br>
