added why-action response section to 4cond ver

--- a/experiments/goal_actions_4conds/soc_info_goals.html
+++ b/experiments/goal_actions_4conds/soc_info_goals.html
@@ -295,6 +295,10 @@
 
             <div class="slide" id="final_questions">
                 <center> Please answer the following questions to help us improve our task. Thank you!<br> <br>
+                  <p class="block-text" name="why_action">
+                      Why did you select the action that you chose? <br>
+                      <input type="text" id="why_action" name="why_action" size="70">
+                  </p>
                     <p class="block-text">
                         What do you think this task was about? <br>
                         <input type="text" id="about" name="about" size="70">
