--- a/experiments/04_cat/cat.html
+++ b/experiments/04_cat/cat.html
@@ -55,8 +55,10 @@
     <img src="_shared/images/stanford.png" alt="Stanford University" id="logo"></img>
     <p id="langcoglab">Stanford Language and Cognition Lab</p>
     <p id="instruct-text">In this game, we're interested
-      in your decision making when you come across some new toys. <br>
-      The HIT should take less than 5 minutes. <br>
+      in your decision making when you come across some new toys.
+      <br><br>
+      The HIT should take less than 5 minutes.
+      <br>
       Please pay attention, thanks!</p>
     <button id="start_button" type="button">Start Experiment</button>
     <p id="legal">
@@ -73,7 +75,7 @@
       consequences. Your anonymity is assured; the researchers who
       have requested your participation will not receive any personal
       information about you.
-      <br><br>
+      <br>
       We have recently been made aware that your public
       <a href="http://www.amazon.com">Amazon.com</a>
       profile can be accessed via your worker ID
@@ -90,7 +92,7 @@
     <p>Imagine that you and your friend Bob are hanging out at Bob’s house,
       and you see some of his favorite toys that you can try out.
     </p>
-
+    <br>
     <p> There are three toys that you can play with.</p>
     <br>
     <div id="toy_imgs_intro"></div>
@@ -104,13 +106,13 @@
   </div>
 
   <div class="slide" id="toy_training_trial">
-    <audio id="sound_player">
-      <source src="media/cat_music.mp3" type="audio/mpeg"></audio>
+    <audio id="sound_player"><source src="media/song1_trim.mp3" type="audio/mpeg"></audio>
     <p id="toy_select_prompt"></p>
     <br>
     <div class="row">
       <div class="column" id="toy_imgs_train"></div>
-      <div class="column" id="bob"><img src="media/bob.png" id="bob" style="width:40%" height="250px"></div>
+      <div class="column" id="notes_gif"><img id="notes_gif_actions" src="media/music_notes.gif" style="width:160px;height:80px; visibility: hidden;"></div>
+      <div class="column" id="bob"><img src="media/bob.png" id="bob" style="width:50%" height="225px"></div>
     </div>
     <br>
     <p id="action_prompt">Which action would you like to try to make this toy play music?</p>
@@ -121,12 +123,17 @@
   </div>
 
   <div class="slide" id="final_toy_choice">
-    <p>Now, you have time to play with one more toy,</p>
+    <p id="final_toy_prompt"></p>
+    <br>
     <p class="display_condition">{{}}</p>
     <br>
     <p>Which toy do you want to select?</p>
     <br>
-    <div id="toy_imgs_test"></div>
+    <div class="row">
+      <div class="test_column"><div id="toy_imgs_test"></div></div>
+      <div class="test_column" id="bob_test"><img src="media/bob.png" id="bob_test" style="width:40%" height="225px"></div>
+    </div>
+
   </div>
 
   <div class="slide" id="subj_info">
