fixed centering in no-social cond

--- a/experiments/04_cat/cat.html
+++ b/experiments/04_cat/cat.html
@@ -141,7 +141,7 @@
 
   <div class="slide" id="final_toy_choice">
     <p id="final_toy_prompt"></p>
-    <p class="display_condition">{{}}</p>
+    <p class="display_condition"></p>
     <br>
     <p>Which toy do you want to select?</p>
     <br>
@@ -156,7 +156,7 @@
       </div>
       <div class="test_column" id="bob_test"><img src="media/bob.png" id="bob_test" style="width:40%" height="225px"></div>
     </div>
-
+    <br>
     <button id="adv_qa" onclick="_s.log_toy_choice()">Click to Finish</button>
     <p class="err" id="error_msg_toy_choice"></p>
 
